...
    },
    {
      key: "carbon",
      title: "Carbon",
      focusedIcon: "leaf",
      component: Carbon,
      testID: "nav-carbon-po",
    },
    {
      key: "profile",
      title: "Profile",
      focusedIcon: "account",
      component: Profile,
...
