appId: com.anonymous.parkpilot
---
- launchApp

- tapOn:
    id: "welcome-login-button"

- tapOn:
    id: "email-input"
- inputText: "po@gmail.com"

- tapOn:
    id: "password-input"
- inputText: "Password1"

- hideKeyboard
- tapOn:
    id: "login-button"

- tapOn: "OK"

- extendedWaitUntil:
    visible:
      id: "searchbar"
    timeout: 3000
- assertVisible:
    id: "searchbar"

- tapOn:
    id: "nav-carbon-po"

- assertVisible:
    id: "po-carbon-title"

- tapOn:
    id: "po-carbon-date-picker-btn"

- tapOn: "Previous"

- tapOn: "15"

- tapOn: "OK"

- assertVisible:
    id: "po-carbon-title"

- tapOn:
    id: "show-lot-option-modal-btn"

- tapOn:
    id: "lot-option-2"

- assertVisible:
    id: "po-carbon-title"
    

- tapOn:
    id: "nav-profile"

- assertVisible:
    id: "logout-btn"

- tapOn:
    id: "logout-btn"

- assertVisible:
    id: "welcome-login-button"
    
    
